# WindowsExplorerOrganizeMenu

./: .gitignore  Cargo.toml  README.md  installer.iss
src/: main.rs  undo.rs
src/installer/: elevation.rs  install.rs  main.rs  registry.rs
src/organizer/: by_date.rs  by_modified_date.rs  by_name.rs  by_size.rs  by_type.rs  flatten.rs  mod.rs  remove_duplicates.rs
