[package]
name = "file-explorer-organize-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "organizer"
path = "src/main.rs"


[dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "winreg", "processthreadsapi", "handleapi", "winbase", "std", "errhandlingapi", "securitybaseapi", "winnt"] }
winreg = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.11.0-rc.2"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true